# mathematical-algorithms

./: .gitignore  README.md
assebly/: binToDec.s  binToHex.s  decToBin.s  decToHex.s  fibb.s  fibb_c.c  gcd.s  makefile.txt  timestamp.s
assebly/silnia/: Silnia.csv  silnia.asm  silnia.cpp  silnia.s
cpp/: Factorial.csv  factorial.cpp
oiak_project/: CMakeLists.txt
oiak_project/project/: AutomaticTests.cpp  AutomaticTests.h  main.cpp
oiak_project/project/Menu/: AutoTestMenu.cpp  AutoTestMenu.h  Menu.cpp  Menu.h  SystemConversionMenu.cpp  SystemConversionMenu.h
oiak_project/project/algorithms/: Fibonacci.cpp  Fibonacci.h  GCD.cpp  GCD.h  RPN.cpp  RPN.h  SystemConversion.cpp  SystemConversion.h
oiak_project/project/other/: Timer.cpp  Timer.h
oiak_project/project/output/: binToDecTest.csv  binToHexTest.csv  fibTest.csv  gcdTest.csv
python/: Bin_Dec.csv  Bin_Hex.csv  Dec_Bin.csv  Dec_Hex.csv  Fibb.csv  Hex_Bin.csv  Hex_Dec.csv  NWD.csv  SilniaPy.csv  algorithms.py  generator.py  main.py  silnia.py  system_conversion.py  test.py
